tests/ui/invalid_type_wchz.stderr
error: expected one of: `u16`, `u32`, `i16`, `i32`
 --> $DIR/invalid_type_wchz.rs:3:36
  |
3 | const INVALID_TYPE: &[f32] = wchz!(f32, "oops");
  |                                    ^^^
