tests/ui/invalid_type_wchz.rs
use wchar::wchz;

const INVALID_TYPE: &[f32] = wchz!(f32, "oops");

fn main() {}
